plugins {
	id 'java'
}

group = 'com.oracle.java'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '20'

repositories {
	mavenCentral()
}

dependencies {
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.1'
}

tasks.named('test') {
	useJUnitPlatform()
	javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(20)
    }
	jvmArgs(['--enable-preview'])
}


tasks.withType(JavaCompile).configureEach {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(20)
    }
    it.options.compilerArgs.add('--enable-preview')
}